fix: rename connectionString to host, use getFirst() instead of get(0), fix package-info format, update test patterns, add api-server docs, and include DocumentDB icons